--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,3 +18,7 @@
 --------------------------------------------- */
 @import "elements/buttons";
 @import "elements/fields";
+
+/* General
+--------------------------------------------- */
+@import "general";
