--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -25,3 +25,19 @@
 /* Galleries
 --------------------------------------------- */
 @import "media/galleries";
+
+/* Cover
+--------------------------------------------- */
+@import "content/cover";
+
+/* Column
+--------------------------------------------- */
+@import "content/column";
+
+/* About
+--------------------------------------------- */
+@import "content/about";
+
+/* Services
+--------------------------------------------- */
+@import "content/services";
