--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -19,3 +19,30 @@ input[type="submit"] {
 		border-color: $color__border-button-focus;
 	}
 }
+
+.wp-block-button {
+
+	.wp-block-button__link {
+		border-radius: 0;
+		transition: all 0.3s;
+	}
+
+	&.button .wp-block-button__link {
+		font-size: 0.8em;
+		padding: 20px 70px;
+		background-color: transparent;
+		border: solid 3px $color__primary;
+
+		&:hover {
+			background-color: $color__primary;
+		}
+	}
+
+	&.button-primary .wp-block-button__link {
+		color: #fff;
+	}
+
+	&.button-secondary .wp-block-button__link {
+		color: #000;
+	}
+}
