--- a/style.css
+++ b/style.css
@@ -934,10 +934,6 @@ textarea {
 
 /* Cover
 --------------------------------------------- */
-.main-cover {
-  padding: 350px 0;
-}
-
 .wp-block-cover .wp-block-cover__inner-container {
   max-width: 80%;
   margin: auto;
@@ -961,14 +957,20 @@ textarea {
   font-weight: 400;
 }
 
-.wp-block-cover .cover-logo {
+/* Header
+--------------------------------------------- */
+.header-section {
+  padding: 350px 0;
+}
+
+.header-section .header-logo {
   max-width: 370px;
   margin: 0;
 }
 
-/* Column
+/* Landing
 --------------------------------------------- */
-.wp-block-columns p {
+.landing-section p {
   line-height: 2em;
 }
 
