--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -28,7 +28,7 @@ input[type="submit"] {
 	}
 
 	&.button .wp-block-button__link {
-		font-size: 0.8em;
+		font-size: 14px;
 		padding: 20px 70px;
 		background-color: transparent;
 		border: solid 3px $color__primary;
