--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -7,3 +7,9 @@ $font__code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+$font__large_heading: 36px;
+$font__medium_heading: 30px;
+$font__small_heading: 24px;
+$font__large_text: 16px;
+$font__regular_text: 14px;
