--- a/sass/components/sections/_about.scss
+++ b/sass/components/sections/_about.scss
@@ -1,9 +1,9 @@
 .about-section {
-    margin: 150px auto;
+    padding: 100px 0;
 
-        
     .about-info {
         padding: 60px;
+        padding-left: 0;
 
         h3 {
             position: relative;
