--- a/sass/components/sections/_landing.scss
+++ b/sass/components/sections/_landing.scss
@@ -1,5 +1,9 @@
 .landing-section {
 
+    padding: 100px 0;
+
+    background-color: $color__primary;
+
     h3 {
         font-size: $font__small_heading;
     }
