--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -13,8 +13,13 @@ $color__link-visited: #800080; //purple
 $color__link-hover: #191970; //midnightblue
 $color__text-main: #404040;
 
+$color__text-primary: #000;
+$color__text-secondary: #fff;
+$color__text-teritary: #858585;
+
 $color__primary: #eb6f31;
 $color__secondary: #313131;
+$color__teritary: #bb5b2c;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
