--- a/sass/components/content/_block-cover.scss
+++ b/sass/components/content/_block-cover.scss
@@ -1,7 +1,7 @@
 .wp-block-cover {
     .wp-block-cover__inner-container {
         max-width: 80%;
-        margin: auto;
+        margin: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
