--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -69,3 +69,7 @@
 /* News
 --------------------------------------------- */
 @import "sections/news";
+
+/* Contact
+--------------------------------------------- */
+@import "sections/contact";
