--- a/sass/components/sections/_partners.scss
+++ b/sass/components/sections/_partners.scss
@@ -8,13 +8,6 @@
         color: #fff;
         position: relative;
 
-        &::before {
-            position: absolute;
-            left: 0;
-            content: '';
-            width: 80px;
-            bottom: -10px;
-            border: 1px solid $color__teritary;
-        }
+        @include line-under;
     }
 }
