--- a/sass/components/sections/_products.scss
+++ b/sass/components/sections/_products.scss
@@ -7,16 +7,7 @@
         color: #fff;
         position: relative;
 
-        &::before {
-            position: absolute;
-            text-align: center;
-            content: '';
-            width: 80px;
-            left: 50%;
-            transform: translate(-50%);
-            bottom: -10px;
-            border: 1px solid $color__primary;
-        }
+        @include line-under-centered;
     }
 
     .container {
