--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -73,3 +73,7 @@
 /* Contact
 --------------------------------------------- */
 @import "sections/contact";
+
+/* Footer
+--------------------------------------------- */
+@import "sections/footer";
