--- a/sass/components/sections/_contact.scss
+++ b/sass/components/sections/_contact.scss
@@ -11,28 +11,40 @@
 
         .contact-info {
             padding-right: 180px;
+
+            p {
+                margin: 0;
+                color: $color__text-teritary;
+                line-height: 2em;
+            }
+        }
+
+        .contact-details {
+            p {
+                margin: 0;
+                margin-bottom: 0.5em;
+                color: $color__text-teritary;
+            }
         }
 
         .wp-block-column {
 
             margin: 0;
 
-            p {
-                margin-top: 0;
-                color: $color__text-teritary;
-                line-height: 2em;
-            }
-
             ul {
                 margin-left: 0;
                 list-style-type: none;
-                line-height: 2em;
 
                 li {
+                    margin-bottom: 1em;
+                    transition: all 0.3s;
 
                     a {
                         color: $color__text-teritary;
                         text-decoration: none;
+                        position: relative;
+
+                        @include line-under-link;
                     }
                 }
             }
