--- a/style.css
+++ b/style.css
@@ -1130,106 +1130,111 @@ textarea {
   padding-top: 30px;
 }
 
-.products-section .container .row {
+.products-section .container .wp-block-columns {
   flex-wrap: wrap;
 }
 
-.products-section .container .row .wp-block-column {
+.products-section .container .wp-block-columns .wp-block-column {
   margin: 0;
   flex-basis: 31%;
 }
 
 @media (max-width: 1200px) {
-  .products-section .container .row .wp-block-column {
+  .products-section .container .wp-block-columns .wp-block-column {
     flex-basis: 49%;
   }
 }
 
 @media (max-width: 992px) {
-  .products-section .container .row .wp-block-column {
+  .products-section .container .wp-block-columns .wp-block-column {
     flex-basis: 100%;
   }
 }
 
-.products-section .container .row .wp-block-column .product .product-logo {
+.products-section .container .wp-block-columns .wp-block-column .product .product-logo {
   background-color: #eb6f31;
   border-radius: 50%;
   height: 100px;
   width: 100px;
 }
 
-.products-section .container .row .wp-block-column .product .product-info {
+.products-section .container .wp-block-columns .wp-block-column .product .product-info {
   margin: 0;
 }
 
-.products-section .container .row .wp-block-column .product .product-info h4 {
+.products-section .container .wp-block-columns .wp-block-column .product .product-info h4 {
   color: #fff;
   font-size: 16px;
   margin-top: 0;
 }
 
-.products-section .container .row .wp-block-column .product .product-info p {
+.products-section .container .wp-block-columns .wp-block-column .product .product-info p {
   color: #858585;
   line-height: 2em;
 }
 
 /* Gallery
 --------------------------------------------- */
-.custom-gallery.row {
+.custom-gallery {
   margin: 0;
   flex-wrap: wrap;
 }
 
-.custom-gallery.row .wp-block-column {
+.custom-gallery .large-column {
   margin: 0;
   flex-basis: 50%;
 }
 
 @media (max-width: 1350px) {
-  .custom-gallery.row .wp-block-column {
+  .custom-gallery .large-column {
     flex-basis: 100%;
   }
 }
 
-.custom-gallery.row .wp-block-column .wp-block-image {
+.custom-gallery .large-column .wp-block-image {
   margin: 0;
   height: 800px;
 }
 
-.custom-gallery.row .wp-block-column .wp-block-image img {
+.custom-gallery .large-column .wp-block-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.custom-gallery.row .wp-block-column .row {
+.custom-gallery .small-column {
+  margin: 0;
+  flex-basis: 50%;
+}
+
+.custom-gallery .small-column .wp-block-columns {
   margin: 0;
   flex-wrap: wrap;
 }
 
-.custom-gallery.row .wp-block-column .row .wp-block-column {
+.custom-gallery .small-column .wp-block-columns .wp-block-column {
   margin: 0;
   flex-basis: 50%;
 }
 
 @media (max-width: 992px) {
-  .custom-gallery.row .wp-block-column .row .wp-block-column {
+  .custom-gallery .small-column .wp-block-columns .wp-block-column {
     flex-basis: 100%;
   }
 }
 
-.custom-gallery.row .wp-block-column .row .wp-block-column .wp-block-image {
+.custom-gallery .small-column .wp-block-columns .wp-block-column .wp-block-image {
   margin: 0;
   height: 400px;
 }
 
 @media (max-width: 992px) {
-  .custom-gallery.row .wp-block-column .row .wp-block-column .wp-block-image {
+  .custom-gallery .small-column .wp-block-columns .wp-block-column .wp-block-image {
     height: 800px;
   }
 }
 
-.custom-gallery.row .wp-block-column .row .wp-block-column .wp-block-image img {
+.custom-gallery .small-column .wp-block-columns .wp-block-column .wp-block-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -1290,24 +1295,24 @@ textarea {
   margin: 0;
 }
 
-.news-section .news-gallery .row {
+.news-section .news-gallery .wp-block-columns {
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.news-section .news-gallery .row .wp-block-column {
+.news-section .news-gallery .wp-block-columns .wp-block-column {
   margin: 0;
   flex-basis: 45%;
   margin: 5px;
 }
 
-.news-section .news-gallery .row .wp-block-column img {
+.news-section .news-gallery .wp-block-columns .wp-block-column img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.news-section .news-gallery .row .wp-block-column h4 {
+.news-section .news-gallery .wp-block-columns .wp-block-column h4 {
   font-size: 14px;
 }
 
@@ -1322,47 +1327,47 @@ textarea {
   width: 120px;
 }
 
-.contact-section .row {
+.contact-section .wp-block-columns {
   justify-content: space-around;
 }
 
-.contact-section .row .contact-info {
+.contact-section .wp-block-columns .contact-info {
   padding-right: 180px;
 }
 
-.contact-section .row .contact-info p {
+.contact-section .wp-block-columns .contact-info p {
   margin: 0;
   color: #858585;
   line-height: 2em;
 }
 
-.contact-section .row .contact-details p {
+.contact-section .wp-block-columns .contact-details p {
   margin: 0;
   margin-bottom: 0.5em;
   color: #858585;
 }
 
-.contact-section .row .wp-block-column {
+.contact-section .wp-block-columns .wp-block-column {
   margin: 0;
 }
 
-.contact-section .row .wp-block-column ul {
+.contact-section .wp-block-columns .wp-block-column ul {
   margin-left: 0;
   list-style-type: none;
 }
 
-.contact-section .row .wp-block-column ul li {
+.contact-section .wp-block-columns .wp-block-column ul li {
   margin-bottom: 1em;
   transition: all 0.3s;
 }
 
-.contact-section .row .wp-block-column ul li a {
+.contact-section .wp-block-columns .wp-block-column ul li a {
   color: #858585;
   text-decoration: none;
   position: relative;
 }
 
-.contact-section .row .wp-block-column ul li a::before {
+.contact-section .wp-block-columns .wp-block-column ul li a::before {
   position: absolute;
   left: 0;
   content: '';
@@ -1374,7 +1379,7 @@ textarea {
   transition: 0.3s all;
 }
 
-.contact-section .row .wp-block-column ul li a:hover::before {
+.contact-section .wp-block-columns .wp-block-column ul li a:hover::before {
   opacity: 1;
 }
 
