--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -62,3 +62,15 @@
 		opacity: 1;
 	}
 }
+
+@mixin large-section {
+	padding: 350px 0;
+}
+
+@mixin medium-section {
+	padding: 100px 0;
+}
+
+@mixin small-section {
+	padding: 30px 0;
+}
