--- a/sass/components/sections/_gallery.scss
+++ b/sass/components/sections/_gallery.scss
@@ -1,56 +1,57 @@
 .custom-gallery {
+    margin: 0;
+    flex-wrap: wrap;
 
-    &.row {
+    .large-column {
         margin: 0;
-        flex-wrap: wrap;
 
-        .wp-block-column {
+        flex-basis: 50%;
+
+        @media (max-width: $xlarge-screen) {
+            flex-basis: 100%;
+        }
+
+        .wp-block-image {
             margin: 0;
+            height: 800px;
 
-            flex-basis: 50%;
-
-            @media (max-width: $xlarge-screen) {
-                flex-basis: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
+        }
+    }
 
-            .wp-block-image {
+    .small-column {
+        margin: 0;
+        
+        flex-basis: 50%;
 
+        .wp-block-columns {
+            margin: 0;
+            flex-wrap: wrap;
+
+            .wp-block-column {
                 margin: 0;
-                height: 800px;
+                flex-basis: 50%;
 
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
+                @media (max-width: $medium-screen) {
+                    flex-basis: 100%;
                 }
-            }
 
-            .row {
-                margin: 0;
-                flex-wrap: wrap;
-    
-                .wp-block-column {
+                .wp-block-image {
                     margin: 0;
-                    flex-basis: 50%;
+                    height: 400px;
 
                     @media (max-width: $medium-screen) {
-                        flex-basis: 100%;
+                        height: 800px;
                     }
 
-                    .wp-block-image {
-                
-                        margin: 0;
-                        height: 400px;
-
-                        @media (max-width: $medium-screen) {
-                            height: 800px;
-                        }
-        
-                        img {
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
                     }
                 }
             }
