--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -8,8 +8,10 @@ $font__pre: "Courier 10 Pitch", courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 
+$font__xlarge_heading: 90px;
 $font__large_heading: 36px;
 $font__medium_heading: 30px;
 $font__small_heading: 24px;
+$font__xlarge_text: 28px;
 $font__large_text: 16px;
 $font__regular_text: 14px;
