--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -77,3 +77,7 @@
 /* Footer
 --------------------------------------------- */
 @import "sections/footer";
+
+/* Contact Us
+--------------------------------------------- */
+@import "sections/contact-us";
