--- a/sass/components/sections/_landing.scss
+++ b/sass/components/sections/_landing.scss
@@ -5,7 +5,7 @@
     background-color: $color__primary;
 
     .wp-block-columns {
-        margin: 0;
+        margin: 0 auto;
 
         .wp-block-column {
             margin: 0;
