--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -74,3 +74,25 @@
 @mixin small-section {
 	padding: 30px 0;
 }
+
+@mixin button-styles {
+	border-radius: 0;
+		font-size: 14px;
+		padding: 20px 70px;
+		background-color: transparent;
+		border: solid 3px $color__primary;
+		transition: all 0.3s;
+
+		&:hover {
+			background-color: $color__primary;
+			cursor: pointer;
+		}
+}
+
+@mixin button-primary-styles {
+	color: #fff;
+}
+
+@mixin button-secondary-styles {
+	color: #000;
+}
